--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 
     <!-- eto icons ko -->
+    <!-- Please do not use this link or copy this script this is Russell personalize link.  -->
     <script src="https://kit.fontawesome.com/975df08e90.js" crossorigin="anonymous"></script>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
